# FastAPI-App-for-Stocks-Price-Prediction

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/parser/: parser_router.py  yahoo_parser.py
app/predictor/: notebook.ipynb  predict_router.py  predictor.py
