[tool.poetry]
name = "fastapi project for s&p 500 stocks price prediction"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandr.tereshin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
